--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME="HubSpot WAPAPP Integration"
 APP_ENV=production
 APP_KEY=
 APP_DEBUG=false
-APP_URL=https://hubspot.tittu.in
+APP_URL=https://tekspot.tittu.in
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -14,7 +14,7 @@ DB_PASSWORD=
 # HubSpot Configuration
 HUBSPOT_CLIENT_ID=
 HUBSPOT_CLIENT_SECRET=
-HUBSPOT_REDIRECT_URI=https://hubspot.tittu.in/integrations/hubspot/callback
+HUBSPOT_REDIRECT_URI=https://tekspot.tittu.in/integrations/hubspot/callback
 HUBSPOT_SCOPES=oauth,crm.objects.contacts.read,crm.objects.deals.read
 HUBSPOT_API_BASE=https://api.hubapi.com
 HUBSPOT_WEBHOOK_SECRET=
